# CAP.Python

./: .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml
.github/workflows/: cy.yml
src/cap/python/basic/: funciones.py  lab_JSON.py  test_validacion.py  tipos.py
src/cap/python/basic/archivos/: alumnos.json
src/cap/python/basic/funciones/: filtroAlumnos.py  filtro_alumnos.py
src/cap/python/basic/labclases/: clases.py
src/cap/python/basic/labio/: ejecutar.py
src/cap/python/basic/labio/app/: fecha.py  logger_config.py  main.py  proceso.py  reportes.py  rutas.py
src/cap/python/basic/labio/config/: logging.yaml
src/cap/python/basic/labio/datos/: reporte.json  resumen.json  ventas.csv
src/cap/python/basic/labmodulos/: modulos.py
src/cap/python/basic/labpythonic/: backoff  lotes.py
src/cap/python/basic/labtipado/: tipado.py
