[project]
name = "cap-python"
version = "0.1.0"
description = "Validaciones basicas para el manejo de datos en python"
authors = [
    {name = "Manuel Guillen",email = "manuelguillen1403@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "cap", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
# pytest = "^7.0.0"
# pytest-cov = "^4.0.0"
# pytest-mock = "^3.0.0"
pylint = "^3.0.0"
black = "^26.5.1"
isort = {version = "^8.0.1", extras = ["pyproject"]}
pre-commit = "^4.6.0"

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
(/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/)
'''

[tool.isort]
line_length = 120
force_sort_within_sections = true
multi_line_output = 3
include_trailing_comma = true
